--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "taskleaf",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "5.4.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
+  }
 }
